<resources>
    <string name="app_name">JusToDo</string>
    <string name="due">残り</string>
    <string name="default_due_date">0</string>
    <string name="day">日</string>
    <string name="title">タイトル</string>
    <string name="title_fill_hints">ToDo title</string>
    <string name="description_auto_fill_hints">ToDo description</string>
    <string name="description">説明</string>
    <string name="create_todo_button">追加</string>
    <string name="line">line</string>
    <string name="no_title">No title</string>
    <string name="done">Done</string>
    <string name="navigation_point">navigationPoint</string>
    <string name="list_view_bottom_title">ToDo</string>
    <string name="point_view_bottom_title">point</string>
    <string name="undone">undone</string>
</resources>
