<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
                name="todoInfo"
                type="com.ict.mito.justodo.domain.ToDoInfo" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_size"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/half_base_margin"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginBottom="@dimen/half_base_margin">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/due_date_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/due_date_constraint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/base_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <TextView
                        android:id="@+id/due"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/due"
                        android:textSize="@dimen/due_text_size"
                        app:layout_constraintBottom_toTopOf="@id/due_date"
                        app:layout_constraintEnd_toStartOf="@id/due_date" />

                <TextView
                        android:id="@+id/due_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{todoInfo.dueDate}"
                        android:textSize="@dimen/due_date_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <TextView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day"
                        app:layout_constraintStart_toEndOf="@id/due_date"
                        app:layout_constraintTop_toBottomOf="@id/due_date" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{todoInfo.title}"
                    app:layout_constraintStart_toEndOf="@id/due_date_constraint"
                    app:layout_constraintTop_toTopOf="parent"
                    tool:text="task title" />

            <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    app:layout_constraintBottom_toBottomOf="@id/title_text"
                    app:layout_constraintStart_toEndOf="@id/title_text"
                    app:layout_constraintTop_toTopOf="@id/title_text"
                    tool:text="yyyy/mm/dd" />

            <ImageView
                    android:id="@+id/line"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="#000000"
                    android:contentDescription="@string/line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/title_text"
                    app:layout_constraintTop_toBottomOf="@id/title_text" />

            <TextView
                    android:id="@+id/description_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:text="@{todoInfo.description}"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/title_text"
                    app:layout_constraintTop_toBottomOf="@id/line"
                    tool:text="description" />

            <Button
                    android:id="@+id/toggle_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
